# create2-salt-miner

./: .gitignore  Cargo.toml  README.md  salty.toml  taplo.toml
.github/workflows/: release.yml
src/: display.rs  gpgpu.rs  main.rs  miner.rs
src/kernels/: keccak256.cl  keccak256_2.cl
